<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gdn.android.onestop.ideation.fragment.IdeaDetailFragment">
    <data>
        <variable
            name="viewmodel"
            type="com.gdn.android.onestop.ideation.viewmodel.IdeaDetailViewModel" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100">

        <ScrollView
            android:id="@+id/scrollView"
            android:padding="10dp"
            android:layout_weight="85"
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_height="0dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_user"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:foreground="@drawable/border_round_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_text_h4"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_user"
                    app:layout_constraintStart_toEndOf="@+id/iv_user"
                    app:layout_constraintTop_toTopOf="@+id/iv_user"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_time"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_text_h6"
                    app:layout_constraintStart_toStartOf="@+id/tv_username"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username" />

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/post_content"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/iv_user"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date" />

                <com.gdn.android.onestop.base.FaSolidTextView
                    android:id="@+id/tv_upVote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="&#xf164; 10"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_content" />

                <com.gdn.android.onestop.base.FaSolidTextView
                    android:id="@+id/tv_downVote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:text="&#xf165; 10"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_upVote"
                    app:layout_constraintTop_toTopOf="@+id/tv_upVote" />

                <com.gdn.android.onestop.base.FaSolidTextView
                    android:id="@+id/tv_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:text="&#xf27a; 10"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_downVote"
                    app:layout_constraintTop_toTopOf="@+id/tv_downVote" />

                <TextView
                    android:id="@+id/tv_load_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/load_previous_comment"
                    android:onClick="@{()->viewmodel.loadMoreComment()}"
                    app:layout_constraintStart_toStartOf="@+id/tv_upVote"
                    app:layout_constraintTop_toBottomOf="@+id/tv_upVote" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_comment"
                    android:layout_marginTop="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/tv_load_more">

                </androidx.recyclerview.widget.RecyclerView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <LinearLayout
            android:layout_weight="15"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <EditText
                android:id="@+id/et_commentInput"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:maxLines="4"
                android:text="@={viewmodel.commentInput}"
                android:layout_gravity="center_horizontal|center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/comment_input_border"
                android:hint="@string/comment_hint"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/btn_commentSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|end"
                android:background="@color/white"
                android:text="@string/post"
                android:textSize="@dimen/size_text_h3"
                android:textColor="@color/faded_blue"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>


    </LinearLayout>
</layout>
